--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.5",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+     "@rainbow-me/rainbowkit": "2.2.4",
+    "@tanstack/react-query": "^5.76.1",
+    "@wagmi/core": "^2.17.2",
+    "react-icons": "^5.5.0",
+    "viem": "~2.30.0",
+    "wagmi": "^2.15.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
