--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "2.2.4",
+    "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.76.1",
+    "@wagmi/core": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.517.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
-     "@rainbow-me/rainbowkit": "2.2.4",
-    "@tanstack/react-query": "^5.76.1",
-    "@wagmi/core": "^2.17.2",
-    "react-icons": "^5.5.0",
     "viem": "~2.30.0",
     "wagmi": "^2.15.4"
   },
