--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@rainbow-me/rainbowkit": "2.2.4",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.76.1",
@@ -21,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "viem": "~2.30.0",
     "wagmi": "^2.15.4"
